--- a/app/src/main/res/layout/activity_facture__create.xml
+++ b/app/src/main/res/layout/activity_facture__create.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper2"
     tools:context=".Facture_Create">
 
     <EditText
@@ -13,6 +14,7 @@
         android:ems="10"
         android:hint="First Name"
         android:inputType="text"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -27,6 +29,7 @@
         android:ems="10"
         android:hint="Last Name"
         android:inputType="text"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -38,7 +41,8 @@
         android:id="@+id/product"
         android:layout_width="200dp"
         android:layout_height="20dp"
-        android:text="Choose Porducts and Quantity"
+        android:text="Choose Products and Quantity"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.061"
