--- a/app/src/main/res/layout/activity_single_facture.xml
+++ b/app/src/main/res/layout/activity_single_facture.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper2"
     tools:context=".SingleFacture">
 
     <TextView
         android:id="@+id/last_name_value"
         android:layout_width="200dp"
         android:layout_height="30dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.687"
@@ -23,6 +25,7 @@
         android:layout_height="30dp"
         android:text="Last Name :"
         android:textSize="15dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.061"
@@ -36,6 +39,7 @@
         android:layout_height="30dp"
         android:text="First Name :"
         android:textSize="15dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.061"
@@ -47,6 +51,7 @@
         android:id="@+id/first_name_value"
         android:layout_width="200dp"
         android:layout_height="30dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.687"
@@ -60,6 +65,7 @@
         android:layout_height="30dp"
         android:text="Products and Quantities :"
         android:textSize="15dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.075"
