--- a/app/src/main/res/layout/activity_single_product.xml
+++ b/app/src/main/res/layout/activity_single_product.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper2"
     tools:context=".SingleProduct">
 
     <Button
@@ -24,7 +25,8 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text=""
-        android:textSize="25dp"
+        android:textSize="15dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.943"
@@ -37,7 +39,8 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text=""
-        android:textSize="25dp"
+        android:textSize="15dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.943"
@@ -50,7 +53,8 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text=""
-        android:textSize="25dp"
+        android:textSize="15dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.943"
@@ -64,6 +68,7 @@
         android:layout_height="50dp"
         android:text="Quantity :"
         android:textSize="25dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.178"
@@ -77,6 +82,7 @@
         android:layout_height="50dp"
         android:text="Description :"
         android:textSize="25dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.059"
@@ -90,6 +96,7 @@
         android:layout_height="50dp"
         android:text="Libelle : "
         android:textSize="25dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.231"
@@ -103,6 +110,7 @@
         android:layout_height="50dp"
         android:text=" Price :"
         android:textSize="25dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.231"
@@ -115,7 +123,8 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:text=""
-        android:textSize="25dp"
+        android:textSize="15dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.943"
